k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mysticstars
  labels:
    app: mysticstars
    version: v1.0.0
